# weitersager

./: .dockerignore  .editorconfig  .gitignore  .scrutinizer.yml  .travis.yml  CHANGES.rst  Dockerfile  Dockerfile.example  LICENSE  MANIFEST.in  README.rst  align_readme.py  compose.yaml  config_example.toml  config_example_docker.toml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements-test.txt  requirements.txt  run_weitersager.py  setup.cfg  setup.py  tox.ini  weitersager.py
.github/workflows/: docker-publish.yml  test.yml
src/weitersager/: __init__.py  argparser.py  cli.py  config.py  http.py  httpreceiver.py  irc.py  processor.py  signals.py  tokencli.py  util.py
tests/: test_cli.py  test_create_announcer.py  test_dummy_announcer.py  test_irc_announcer.py  test_irc_bot.py  test_irc_bot_dummy.py  test_irc_channel.py  test_irc_create_bot.py  test_load_config.py  test_token_cli.py
tests/http/: conftest.py  test_parse_json_message.py  test_receive_server.py
tests/httpreceiver/: conftest.py  test_message.py  test_parse_json_message.py  test_receive_server.py
tests/processor/: test_channel_enabling.py  test_message_handled.py
weitersager/: argparser.py  httpreceiver.py  irc.py  processor.py  signals.py  util.py
