[build-system]
requires = [
    "setuptools >= 51.1.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = [ "py37" ]

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-vv -ra --showlocals"
testpaths = [ "tests" ]
