[metadata]
name = Weitersager
version = attr: weitersager.VERSION
description = A proxy to forward messages received via HTTP to to IRC
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
url = http://homework.nwsnet.de/releases/1cda/#weitersager
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Chat :: Internet Relay Chat
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Logging
    Topic :: System :: Systems Administration
    Topic :: Utilities
license = MIT
license_file = LICENSE
keywords = irc, webhook
platforms = any
project_urls =
    Source code = https://github.com/homeworkprod/weitersager
    Changelog = https://github.com/homeworkprod/weitersager/blob/main/CHANGES.rst

[options]
zip_safe = False
install_requires =
    blinker==1.4
    irc==20.0.0
    rtoml==0.7.1
python_requires = >=3.7
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    weitersager = weitersager.cli:main
    weitersager-token = weitersager.tokencli:main

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
